# rl-arch-assembly

./: .gitignore  .gitmodules  README.md  requirements.txt
config/: placing_scene_config.json  robot_parameters.json  robot_parameters_fast.json  sl_scene_config.json
config/run_configs/: a2c_stabilize.py  a2c_stacking.py  her_stacking.py  her_stacking_sparse.py  planet_stabilize.py  planet_stabilize_only_state_reward.py  planet_stacking.py  td3_sb3_stabilize.py  td3_sb3_stacking.py  td3_sb3_stacking_orig.py  td3_stabilize.py  td3_stacking.py  td3_stacking_double.py  td3_stacking_double_fixed_gripper.py  td3_stacking_double_fixed_gripper_high_tolerance.py  td3_stacking_double_marker_velocity.py  td3_stacking_double_mixed_single_double.py  td3_stacking_double_orig.py  td3_stacking_double_simple.py  td3_stacking_triple.py
config/test_configs/: stacking.py
coppelia/models/arms/: UR10.ttm
coppelia/models/grippers/: rh_p12_rn.ttm  rh_p12_rn.urdf
coppelia/models/grippers/rh_p12_rn_description/: CMakeLists.txt
coppelia/models/grippers/rh_p12_rn_description/doc/: mass_rh.ods
coppelia/models/grippers/rh_p12_rn_description/launch/: rh_p12_rn_ctrl.launch
coppelia/models/grippers/rh_p12_rn_description/src/: rviz_rh_pub.cpp
coppelia/models/grippers/rh_p12_rn_description/urdf/: rh_p12_rn.gazebo
coppelia/models/sensors/: digit.ttm  digit_160x120.ttm
coppelia/scene/: empty.ttt  point_cloud_generation.ttt  ur10_rh_p12_rn.ttt
example/meshes/sl/: material.mtl
pybullet/models/: rh_p12_rn.urdf  rh_p12_rn_digit_mount.urdf  rh_p12_rn_digit_mount_scaled.urdf  ur10.urdf
pybullet/models/rh_p12_rn_description/: CHANGELOG.rst  package.xml
pybullet/models/rh_p12_rn_description/doc/: mass_rh.docx
pybullet/models/rh_p12_rn_description/launch/: rh_p12_rn.rviz  rh_p12_rn_rviz.launch
pybullet/models/rh_p12_rn_description/meshes/: l2_digit_mount.stl  l2_digit_mount_collision.stl  l2_digit_mount_scaled_collision.stl  mount.stl  r2_digit_mount.stl  r2_digit_mount_collision.stl  r2_digit_mount_scaled_collision.stl
pybullet/models/rh_p12_rn_description/urdf/: rh_p12_rn.xacro
python/: build_aggregation.py  calibrate_table_position.py  check_environment.py  eval_model.py  evaluate_test_metrics.py  generate_tasks.py  move_center_submeshes.py  planning_example.py  record_model_pybullet.py  run_sl_sequential_assembly.py  run_training.py  substep_performance_test.py  test_deformable_pybullet.py  test_endeffector_velocity_controller_stabilize.py  test_endeffector_velocity_controller_stacking.py  test_random_aggregation.py
python/aggregation/: __init__.py  aggregation.py  aggregation_part.py  aggregation_properties.py  connection_point.py  template_connection_point.py  template_part.py  util.py
python/algorithm/: __init__.py  algorithm.py  callback_env_wrapper.py  callback_goal_env_wrapper.py  callback_vec_env_wrapper.py  chunked_summary_writer.py  learning_rate.py  planet_wrapper.py
python/gripper/: schunk_gripper.py
python/scene/: part.py  scene_config_parser.py  simulated_assembly_scene.py
python/sensors/: __init__.py  digit_sensor.py
python/sequential_assembly/: construction_plan_parser_board_coordinates.py  construction_plan_parser_rhino.py  sequential_assembly_task.py  sl_sequential_assembly.py  util.py
python/task/: __init__.py  base_task.py  normalizer.py  simulated_task.py  stabilize_task.py  stacking_task.py
rhino/: simple_aggregation_decomposed.gh
rhino/simulation_server/: README.md  requirements.txt  simulation_server.py
(+175 files in other folders)
